# Intelligent_space_orchestrator

./: .env.example  .gitignore  CONTRIBUTING.md  DEPLOY_README.md  GOVERNANCE.md  INFORMATION_FLOW.md  INTERFACE_SPEC.md  OPERATIONS_RUNBOOK.md  PORT_ALLOCATION.md  README.md  allow_firewall_8798_admin.ps1  install_user_startup.ps1  pyproject.toml  requirements.txt  run_two_scene_agent_demo.ps1  run_zhichang_tongyu_agent_demo.ps1  start_hub_lan.bat  start_hub_lan.ps1  start_hub_lan_mux.ps1  start_hub_local.ps1  start_hub_watchdog.ps1  同语协议技术方案.md  聪智场API文档.md
central_hub/: README.md
central_hub/backend/: abc_square_client.py  agent_planner.py  g1_unitree_actions.py  requirements.txt  server.py  tcp_port_mux.py  zhichang_hermes_runtime.py
central_hub/data/: platform_registry.json  robot_link_config.json
docs/: G1_CENTRAL_SESSION_CONTROL.md  G1_PC2_DECODER_SERVICE.md  G1_UBUNTU_BRIDGE_SETUP.md  HARDWARE_COMMAND_TABLE.md  HARDWARE_PYTHON_SDK.md  PERCEPTION_STREAMS.md  ROBOT_HOST_UNIFIED_INTERFACE.md
examples/: hardware_sdk_quickstart.py  img_send.py
examples/g1_ubuntu_bridge/: README.md  g1_bridge_demo.py
examples/perception_streams/: pc2_udp_sender_template.py  vision_receiver_demo.py
examples/robot_host_gateway/: README.md  (+3 more)
frontend_slides_deck/: index_promo.html
scripts/: evaluate_zhichang_tool_models.py  run_zhichang_tongyu_agent_cycle.py  setup.ps1  start_fake_g1.ps1
tongyu_hardware/: __init__.py  cli.py  devices.py  g1_session.py  http.py  hub.py  lan.py  protocol.py  robot_gateway.py  robot_gateway_config.example.json  robotctl.py  streams.py
(+19 files in other folders)
