[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zhichang-tongyu-hardware"
version = "0.1.0"
description = "Client-side Python SDK for the Zhichang Tongyu central hardware hub."
readme = "docs/HARDWARE_PYTHON_SDK.md"
requires-python = ">=3.10"
authors = [
  { name = "Zhichang Tongyu Team" }
]
dependencies = []

[project.optional-dependencies]
stream = [
  "numpy>=1.24",
  "opencv-python>=4.8",
]

[project.scripts]
tongyu-hardware = "tongyu_hardware.cli:main"
tongyu-robot-gateway = "tongyu_hardware.robot_gateway:main"
tongyu-robotctl = "tongyu_hardware.robotctl:main"

[tool.setuptools.packages.find]
include = ["tongyu_hardware*"]

[tool.setuptools.package-data]
tongyu_hardware = ["robot_gateway_config.example.json"]
